
29 de enero de 2017

- con_puente: Nuevas locomotoras.
- maqueta: evitar que un "parpadeo" en el tramo anterior pare el tren
  que está en el siguiente.

4 de febrero de 2017

- maqueta: eliminar restos de algoritmo bellman_ford

17 de febrero de 2017

- con_puente: Mediciones de nuevas locomotoras; Documentación
- newlayout: eventos touch*

1 de marzo de 2017

- maqueta: Evitar que se mueva un tren cuando lo que cambia de posición es el vagón
  de cola. Fix #1
- newlayout: Alinear la visualización de la detección con la visualización de trenes
  (evitar que salga el indicador del tren en todos los tramos). Fix #2

18 de marzo de 2017

- maqueta, chips_maqueta: Permitir configurar la duración del pulso de los desvíos. Fix #3
- newlayout: Soporte para fotos de locomotoras. Fix #4

20 de marzo de 2017

- maqueta: Permitir inicialización de Locomotora con porcentaje_minimo en lugar de
  minimo. Fix #5
- Documentación de algunos directorios

21 de marzo de 2017

- newlayout: Mover fotos de estaciones al directorio "static/estaciones". Fix #6
- newlayout: Fotos de locomotoras en los selectores de clase.
- newlayout: Estaciones sólo CW o sólo CCW visualizan sólo el botón correspondiente.

22 de marzo de 2017

- maqueta: Exponer descripciones de las estaciones en la exportación.
- newlayout: Las locomotoras aparecen ordenadas alfabéticamente por ID.
- newlayout: Las estaciones aparecen ordenadas por ID.
- newlayout: Las estaciones muestran la descripción en lugar del sentido.

24 de marzo de 2017

- eventos: Posibilidad de retrasar la propagación de un evento .tras(...). Fix #9

25 de marzo de 2017

- proceso_pasos, weather: Corregir la espera del final de un proceso.
- newlayout: Utilizar fotos de locomotoras en PNG (con fondo transparente).
- Fotos de todas las locomotoras.

27 de marzo de 2017

- con_puente.{py,svg}: Nuevas vías E8, M4 y M5 para almacenar trenes en estantería.
- maqueta, chips_maqueta: Cambio de nomenclatura "tiene_tren" por "deteccion".
